--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -9,3 +9,17 @@ header .logo {
     left: 20px;
     height: 100%;
 }
+
+#api_status {
+    float: right;
+    border-radius: 50%;
+    background-color: #cccccc;
+    width: 40px;
+    height: 40px;
+    margin-right: 30px;
+    margin-top: -55px;
+}
+
+.available {
+    background-color: #ff545f;
+}
